# OsdagBridge

./: .gitignore  MANIFEST.in  plugin.json  pyproject.toml  requirements.txt
docs/: conf.py
docs/source/: index.rst
src/osdagbridge/: __init__.py  plugin.py
src/osdagbridge/cli/: main.py
src/osdagbridge/core/: _config.py  errors.py
src/osdagbridge/core/bridge_types/plate_girder/: bridge_geometry.py  ui_fields.py
src/osdagbridge/core/bridge_types/plate_girder_bridge/: dto.py  model.py
src/osdagbridge/core/data/ResourceFiles/: Intg_osdag.sqlite
src/osdagbridge/core/solvers/: base.py  mock_solver.py
src/osdagbridge/core/utilities/: units.py
src/osdagbridge/core/utilities/codes/: base.py  irc6_2017.py
src/osdagbridge/core/utils/: common.py
src/osdagbridge/core/utils/codes/: irc5_2015.py
src/osdagbridge/desktop/: __main__.py
src/osdagbridge/desktop/legacy_src/: README.md
src/osdagbridge/desktop/resources/: resources.qrc  resources_rc.py
src/osdagbridge/desktop/resources/themes/: darkstyle.qss  lightstyle.qss
src/osdagbridge/desktop/ui/: additional_inputs.py  template_page.py
src/osdagbridge/desktop/ui/dialogs/: additional_inputs.py  project_location.py
src/osdagbridge/desktop/ui/docks/: input_dock.py  log_dock.py  output_dock.py
src/osdagbridge/desktop/ui/utils/: custom_buttons.py  custom_titlebar.py
src/osdagbridge/desktop_plugin/: plugin_ui.py  views.py
src/osdagbridge/schemas/: bridge_model.json
src/osdagbridge/web/backend/api/: views.py
src/osdagbridge/web/frontend/src/: index.tsx
tests/unit/: test_basic.py
(+10 files in other folders)
